--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,7 @@
 NotEmpty=入力必須です
 Email=Eメールの形式ではありません
 user.search.result.empty=対象のユーザが存在しません。
+
+# User Form
+user.field.gender.MAN=男性
+user.field.gender.WOMAN=女性
